Bubble layout: Fix too short @room in html p tag

--- a/res/css/views/rooms/_BubbleLayout.scss
+++ b/res/css/views/rooms/_BubbleLayout.scss
@@ -295,6 +295,10 @@ $left-gutter: 56px;
         margin-right: -6px;
     }
 
+    a.mx_Pill {
+        max-width: 100%;
+    }
+
     // ---- Bubble specific ----
 
     .sc_EventTile_bubbleContainer {
